2015-04-08  Michael Witten  <mfwitten@gmail.com>

	* doc/extend.texi (Attribute Syntax): Add a trailing semicolon
	to an example.

2015-04-08  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* tree.h (CONVERT_EXPR_P): Commentary typo fix.

2015-04-08  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/extend.texi (__sync Builtins): Fix grammar.

2015-04-08  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/cfg.texi (GIMPLE statement iterators): Fix typo.

2015-04-08  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* varasm.c (emit_local): Move definition of align.

2015-04-08  Julian Brown  <julian@codesourcery.com>

	* config/nvptx/mkoffload.c (process): Support variable mapping.

2015-03-27  Trevor Saunders  <tbsaunde@tbsaunde.org>

	* config/alpha/alpha.c (alpha_use_linkage): Change type of slot to
	alpha_links **.
	(alpha_write_one_linkage): Correct typo.

2015-04-08  Ilya Enkovich  <ilya.enkovich@intel.com>

	* ipa-comdats.c (propagate_comdat_group): Walk through thunks.

2015-04-08  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (bootstrap-lto-noplugin): Rewrite. 

2015-04-08  Ilya Enkovich  <ilya.enkovich@intel.com>

	* tree-chkp.h (chkp_insert_retbnd_call): New.
	* tree-chkp.c (chkp_insert_retbnd_call): New.
	* ipa-split.c (insert_bndret_call_after): Remove.
	(split_function): Use chkp_insert_retbnd_call.
	* cgraphunit.c (cgraph_node::expand_thunk): Build returned
	bounds for instrumented functions.

2015-04-07  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65540
	* calls.c (initialize_argument_information): When producing tail
	call also turn SSA_NAMES passed by references to original PARM_DECLs

2015-04-07  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/65648
	* lra-remat.c (do_remat): Process input and non-input insn
	registers separately.

2015-04-07  Jakub Jelinek  <jakub@redhat.com>

	PR debug/65678
	* valtrack.c (debug_lowpart_subreg): New function.
	(dead_debug_insert_temp): Use it.

	PR middle-end/65680