@@ -1,3 +1,12 @@
+2015-04-08  Ilya Enkovich  <ilya.enkovich@intel.com>
+
+	* tree-chkp.c (chkp_find_const_bounds_var): Remove.
+	(chkp_make_static_const_bounds): Search existing
+	symbol by assembler name.  Use make_decl_one_only.
+	(chkp_get_zero_bounds_var): Remove node	search which
+	is now performed in chkp_make_static_const_bounds.
+	(chkp_get_none_bounds_var): Likewise.
+
 2015-04-08  Michael Witten  <mfwitten@gmail.com>
 
 	* doc/extend.texi (Attribute Syntax): Add a trailing semicolon
